@@ -22,7 +22,7 @@
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": ">=6.2.0,<9.3.99",
+    "typo3/cms-core": ">=6.2.0,<8.99.99",
     "typo3-ter/div2007": ">=1.10.1"
   },
   "autoload": {
